# data-pipeline-app-demo

./: .gitignore  README.md  consumer_pipeline.py  docker-compose.yml  generator_pipeline.py  pipeline.py  pyproject.toml  run_demo.sh
data/bronze/clickstream_data_data/: part-00001-12542999-6ffb-44ec-ab0b-9d1883b51e57-c000.snappy.parquet  part-00001-1912a885-4f4f-400d-ada8-728471f94399-c000.snappy.parquet  part-00001-376e210d-a33a-4257-b672-f6b2c23b87b4-c000.snappy.parquet  part-00001-3a95a13a-e66c-4599-93ed-de4f23bf22d5-c000.snappy.parquet  part-00001-44bc67d2-4ecd-4f25-b944-bf41a5d7f403-c000.snappy.parquet  part-00001-62597036-4eab-476d-929a-ce1cba9aa4ee-c000.snappy.parquet  part-00001-72368d83-b3cf-4a6a-941a-74295b31b36e-c000.snappy.parquet  part-00001-8598d3f1-73ab-4e5e-8021-3d21afc3edde-c000.snappy.parquet  part-00001-94c2070a-b560-41f4-98b1-c9fcddf3bd6a-c000.snappy.parquet  part-00001-986fffed-3f91-4f23-86b5-75f4f20d64ad-c000.snappy.parquet  part-00001-a98d0f56-febc-4b88-9c4e-7e0ceb9fbcee-c000.snappy.parquet  part-00001-bc48d41b-2a76-4927-b01b-9ace50b62d5e-c000.snappy.parquet  part-00001-cbb1e22c-a9b7-486f-b230-716cfbaa349a-c000.snappy.parquet  part-00001-d627457e-89c9-47b7-97e1-7702b15a831f-c000.snappy.parquet  part-00001-d87c4244-6887-4db3-a8f5-552a013234a9-c000.snappy.parquet  part-00001-ea2261b6-2c07-49a7-977c-a55aad99f82c-c000.snappy.parquet  part-00001-ee29e174-2872-456f-a8da-f021131e0d8e-c000.snappy.parquet  part-00001-f0f4e487-550c-4e60-89ac-f743f99cf738-c000.snappy.parquet  part-00001-fbf19336-6ba4-4114-93f0-283caaa47b21-c000.snappy.parquet
pipeline/e_commerce/: consumer_journey.py  consumer_report.py  producer.py
src/: __init__.py  config.py  exceptions.py  models.py
src/app/: rest_api.py
src/connector/: __init__.py  _azure.py  _file.py  _kafka.py
src/data/: __init__.py  _azure.py  _file.py
src/ops/: consumer.py  generator.py  publisher.py  transform.py
(+241 files in other folders)
